<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/white_background"

    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context=".room_and_fam_activity">


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="586dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <LinearLayout
            android:id="@+id/Linear_vertical_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/rooms"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/room_textview"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/rooms"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/room_minus_button"
                    android:layout_width="117dp"
                    android:layout_height="wrap_content"
                    android:text="@string/minus"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/room_plus_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="22sp" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/Black"
                android:visibility="visible"></View>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/White"
                android:visibility="visible"></View>

            <LinearLayout
                android:id="@+id/adult"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/adult_textview"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/adult"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/adult_minus_button"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/adult_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="22sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/Black"
                android:visibility="visible"></View>

            <View
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:background="@color/White"
                android:visibility="visible"></View>

            <LinearLayout
                android:id="@+id/children"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="1"
                android:orientation="horizontal"
                android:visibility="visible">

                <TextView
                    android:id="@+id/children_textview"
                    android:layout_width="109dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/children"
                    android:textColor="@color/Black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="219dp" />

                <Button
                    android:id="@+id/children_minus_button"
                    android:layout_width="73dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/minus"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/children_plus_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/plus"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:background="@color/Black"
                android:visibility="visible"></View>

            <View
                android:layout_width="wrap_content"
                android:layout_height="350dp"
                android:background="@color/White"
                android:visibility="visible"></View>


        </LinearLayout>


    </FrameLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/toolbar_constraintlayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/back_arrow"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginLeft="80dp"
            android:layout_marginEnd="100dp"
            android:layout_marginRight="100dp"
            android:layout_marginBottom="630dp"
            android:text="@string/back_arrow"
            android:textColor="@android:color/background_light"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/guests"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            app:layout_constraintVertical_bias="0.269" />

        <TextView
            android:id="@+id/guests"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="243dp"
            android:layout_marginRight="243dp"
            android:text="@string/guests"
            android:textColor="@android:color/background_light"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/back_arrow"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/ok_button"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="402dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginBottom="3dp"
            android:background="@color/colorAccent"
            android:text="@string/ok"
            android:textAllCaps="true"
            android:textColor="@color/White"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>